--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,19 @@ Body{
 background-image: url("../images/cielo_inicial.jpg");
 }
 
+header h1{
+    color:lightskyblue;
+    margin-left: 0.5em;
+    opacity: 0.5
+}
+
+header h1:hover{
+    color: white;
+    opacity:0.5;
+}
+
 h1{
-    font-size: 5em;
+   font-size: 5em;
    font-family: 'Chau Philomene One',
    sans-serif;
 }
@@ -13,14 +24,20 @@ h1{
 }
 
 form{
-    background-color: orange;
-    height: 4em;
-    padding-top:1.3em;
+    margin-top: 2em;
+    background-color:#ffc400;
+    height: 6.5em;
+    padding-top:2em;
+    border-radius: 1em;
 }
 
+input{
+    height: 3em;
+}
 .btn-md{
-    background-color: rgb(150, 219, 245);
+    background-color: rgb(103, 180, 224);
     margin-left: 1em;
+    border-radius: 0.5em;
 }
 
 ul li{
@@ -31,10 +48,43 @@ ul li{
 
 .day{
     border: 1px solid cornflowerblue;
-    background-color: rgb(150, 219, 245);
+    background : linear-gradient(to right, rgba(179, 220, 237, 1) 0%, rgba(41, 184, 229, 1) 50%, rgba(188, 224, 238, 1) 100%);
     padding-bottom: 2em;
 }
 
 .title{
     font-size: 3.5em;
+}
+
+.btn-weekly{
+    background-color: rgb(70, 137, 182);
+    color:white;
+}
+
+.section-content h2{
+    background-color: rgb(70, 137, 182);
+    font-size: 3em;
+    color:white;
+}
+
+.section-content h3{
+    background-color: rgb(70, 137, 182);
+    font-weight: bolder;
+    font-size: 2.2em;
+    color: #ffc400;
+}
+
+ul{
+    
+    margin-top: 1em;
+}
+
+ul li{
+    font-size: 2em;
+    list-style-image: url("../images/favicon.ico")
+}
+
+ .btn-weekly{
+    margin-top: 1em;
+    
 }
